created client and server connection with socket.io

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "author": "\"Pranay Kumar\"",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.15.2"
+    "express": "^4.15.2",
+    "socket.io": "^1.7.3"
   }
 }
